--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
-  "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -9,17 +7,10 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "devDependencies": {
+    "nuxt": "3.0.0"
+  },
   "dependencies": {
-    "@nuxt/image": "^1.6.0",
-    "@pinia/nuxt": "^0.5.1",
-    "bootstrap": "^5.3.3",
-    "hostname-patcher": "^1.2.0",
-    "nuxt": "^3.11.1",
-    "pinia": "^2.1.7",
-    "sass": "^1.75.0",
-    "sass-loader": "^14.2.1",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-toastification": "^2.0.0-rc.5"
+    "bootstrap": "^5.2.3"
   }
 }
