--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3"
+    "bootstrap": "^5.2.3",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
